# emphysema-estimation

./: .gitignore  CMakeLists.txt  README.md
Classification/: .gitignore  CMakeLists.txt  Classifier.cxx  ClusterModelTrainerTest.cxx  PredictClusterModel.cxx  PredictInstancesCMS.cxx  TrainClusterModelBinary.cxx  TrainClusterModelContinuous.cxx  TrainClusterModelIntervals.cxx  TrainClusterModelIntervalsNoW.cxx
Classification/include/: BagLabeller.h  ClusterLabeller.h  ClusterModel.h  ClusterModelTester.h  ClusterModelTester2.h  ClusterModelTrainer.h  ClusterModelTrainer2.h  ClusterModelTrainer3.h  ClusterModelTrainer3.hxx  ClusterModelTrainerNoCMAES.h  ClusterModelTrainerNoCMAES.hxx  ClusterModelTrainerParameters.h  NearestNeighbourModel.h  NearestNeighbourTrainer.h  NearestNeighbourTrainerParameters.h
ClusterLabeling/include/: GreedyBinaryClusterLabeler.h  SimplexClusterLabeler.h
Clustering/: CMakeLists.txt  LLPTest.cxx
Clustering/include/: Clusterer.h  ClustererBase.h  Clustering.h  InstanceClustererBase.h  InstanceClustering.h  KMeansClusterer.h  KMeansClusterer.hxx  KMeansClusterer2.h  KMeansClusterer2.hxx  KMeansWeightedDistanceInstanceClusterer.h  LLP.h  LLP.hxx  LLP2.h  LLP2.hxx  WeightedEarthMoversDistance.h
Common/include/: Bag.h  BagBase.h  BagConverter.h  BaggedDataset.h  BaggedDatasetIntervalLabels.h  InstanceBase.h  IntervalLabel.h  Types.h  UncertainLabel.h
Data/: .gitignore
Data/Dataset-0/: Order.txt  README.md  copd_label_data_list.txt
Data/Dataset-1/: README.md
Data/Dataset-2/: .gitignore  README.md
Data/Training/: .gitignore
Data/VisualScores/: .gitignore
Distances/include/: MyL2Dist.h  WeightedEarthMoversDistance.h
Experiments/: CMakeLists.txt
Experiments/01-CompareFeaturesWithReference/: README.md
Experiments/05-LLP/: .gitignore  CMakeLists.txt  LLP.cxx  LLP2.cxx  LLP3.cxx  LLP_Continuous.cxx  LLP_ExhaustiveBinaryLabelling.cxx  LLP_GreedyBinaryLabelling.cxx  LLP_NearestNeighbour.cxx  LLP_euclid.cxx
Experiments/06-BoundaryEffects/: BoundaryEffects.cxx  CMakeLists.txt  MakeHistogramPlot.R  MakePatchMask.cxx
Experiments/07-MICCAI/: .gitignore  CMakeLists.txt  MakePatchPredictionHeatMap.cxx
Experiments/07-MICCAI/Scripts/: AggregateResults.R  CalculateICC.R  CalculateICC2.R  CalculateICCManyRuns.R  CalculateICCSingle.R  CalculateKappa.R  CalculateKappaSingle.R  CalculateRawAgreement.R  EmphysemaDistributionTables.R  NoCMAES_PredictTest.py  PlotICC.R  PlotKappa.R  PlotMAE.R  PlotMAETrain.R  PlotPredictionVsTarget.R  PlotPredictionVsTarget_v2.R  PlotROCEmphysemaPresence.R  PlotROCEmphysemaPresenceRegion.R  PredictRegionsValidation.py  PredictTest.py  PredictTrain.py  Train.py  TrainCombinedNoCMAES.py  TrainCombinedTrainingValidation.py  TrainOnlyIntensity.py  TrainOnlyIntensityNotIntervals.py  TrainPatchSize21mm.py  Validate.py  ValidateOnlyIntensity.py  ValidateOnlyIntensityNotIntervals.py  ValidatePatchSize21mm.py
Experiments/Experiment-1/: CMakeLists.txt  KMeansProfiling.cxx  README.md  RandomCentersDistance.cxx  RunKMeansProfiling.py  RunScalability-3.py  RunScalability.py  Scalability-3.cxx  Scalability.cxx  Stability.cxx  StabilityPlots.R  callgrind.out.22461  run.py
Experiments/Experiment-1/Scalability-1/: stats1000  stats2500  stats500  stats5000
Experiments/Experiment-1/Scalability-2/: stats1000  stats2500  stats500  stats5000
Experiments/Experiment-1/Scalability-3/: stats1000  stats2500  stats500  stats5000
FeatureExtraction/: CMakeLists.txt  ExtractFeatures.cxx  ExtractLabels.cxx  ExtractMaskedRegion.cxx  FiniteDifference_GradientFeatures.cxx  FiniteDifference_HessianFeatures.cxx  MakeBag.cxx  MakeBagOnlyIntensity.cxx  MaskedImageFilter.cxx  MaskedNormalizedConvolution.cxx  NormalizedConvolution.cxx  TryingImageToEmphysemaFeaturesFilter.cxx
FeatureExtraction/include/: ImageToEmphysemaFeaturesFilter.h
Filtering/: BinarizeImage.cxx  CMakeLists.txt  TryingHessian3DImageFilter.cxx
IO/: CMakeLists.txt  ConvertFromOctave.cxx  ConvertHR2.cxx  HR2Reader.cxx
IO/include/: IO.h  OctaveReader.hxx  ROIReader.h  ROIReader.hxx
Optimization/: CMakeLists.txt  LLPCostFunctionTest.cxx  TestClusterLabeller.cxx  TestClusterLabellerSetup.cxx
Optimization/include/: BagProportionError.h  BagProportionError2.h  ClusterLabeller.h  ClusterLabeller.hxx  ClusterLabellerBase.h  ContinousClusterLabeller.h  ContinousClusterLabeller.hxx  CrossValidationParams.h  CrossValidator.h  ExhaustiveBinaryClusterLabeller.h  ExhaustiveBinaryClusterLabeller.hxx  GreedyBinaryClusterLabeller.h  GreedyBinaryClusterLabeller.hxx  IntervalSumOfAbsoluteError.h  IntervalSumOfSquaredError.h  LLPCostFunction.h  LLPCostFunction2.h  LLPCrossValidator.h
ROIExtraction/: CMakeLists.txt  GenerateROIs.cxx  MaskedRandomCubicROIs.cxx  SampleROIs.cxx
Scripts/: .gitignore  ErrorPlot.R  GenerateInstanceMembership.py  MakeDataset-0.py  MakeDataset-1.py  MakeDataset-2.py  MakeDataset-3-test.py  MakeDataset-3-training.py  MakeDataset-3-training_10_10.py  MakeDataset-3.py  PlotJointHistogram.R  RunFeatureExtraction.py  RunMaskedHistograms.py  RunROIExtraction.py  SplitCombinedBags.py  SplitCombinedBagsOnlyIntensity.py  Util.py
Statistics/: CMakeLists.txt  CalculateROIRA.cxx  CalculateRegionRA.cxx  CheckEigenvalues.cxx  ComputeJointHistogram.cxx  DetermineHistogramBinEdges.cxx  DetermineHistogramBinEdgesOnlyIntensity.cxx  DetermineHistogramBinWidtsFromPopulation.cxx  MaskedImageHistogram.cxx
Statistics/include/: DenseHistogram.h  DetermineEdgesForEqualizedHistogram.h
Test/: BaggedDatasetTest.cxx  CMSModelTest.cxx  CMSTrainerTest.cxx  CMakeLists.txt  ClusterLabellerTest.cxx  ClusterModelTest.cxx  CrossValidatorTest.cxx  DenseHistogramTest.cxx  DetermineEdgesForEqualizedHistogramTest.cxx  EigenvaluesTest.cxx  GreedyBinaryClusterLabelerTest.cxx  HausdorffTest.cxx  IntervalLossesTest.cxx  IntervalRiskTest.cxx  WeightedEarthMoversDistanceTest.cxx
Test/Data/: ClusterModelSimple.in
Util/: CMakeLists.txt  HR2Reader.cxx  IO.cxx  String.cxx
Util/include/: BagLoss.h  DateTime.h  Eigenvalues.h  HR2Reader.h  IO.h  Path.h  RuntimeMeasurement.h  String.h
(+159 files in other folders)
